# amule

./: .gitattributes  README.md  config.h.cm  org.amule.aMule.desktop  org.amule.aMule.gui.desktop  org.amule.aMule.metainfo.xml
.github/workflows/: ccpp.yml  clang-tidy.yml
cmake/: FindReadline.cmake  boost.cmake  cryptopp.cmake  gdlib.cmake  ip2country.cmake  options.cmake  source-vars.cmake  upnp.cmake
docs/: INSTALL.md  QUICKSTART-AMULEAPI.md
docs/api/: EVENTS.md  REFERENCE.md
docs/man/: amuleapi.1.in  amulecmd.1.in  amuleweb.1.in
docs/man/po/: manpages-de.po  manpages-es.po  manpages-fr.po  manpages-hu.po  manpages-it.po  manpages-lv.po  manpages-pt_BR.po  manpages-ro.po  manpages-ru.po  manpages-ta.po  manpages-tr.po  manpages-zh_TW.po  manpages.pot
packaging/windows/: installer.nsi  po-to-nsh.py
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  amule.pot  ar.po  ast.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et_EE.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  it_CH.po  ja.po  ko_KR.po  l10n.xsl  lt.po  lv.po  nl.po  nn.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sl.po  sq.po  (+6 more)
scripts/: compile.sh  update-po.sh
src/: AboutDialog.cpp  AboutDialog.h  AppImageIntegration.cpp  BaseClient.cpp  CFile.cpp  CFile.h  CMakeLists.txt  ChatWnd.cpp  ClientCreditsList.cpp  ClientList.cpp  ClientList.h  ClientTCPSocket.cpp  CommentDialogLst.cpp  CommentDialogLst.h  CountryFlags.cpp  CountryFlags.h  CryptoPP_Inc.h  DirectoryTreeCtrl.cpp  DirectoryTreeCtrl.h  DownloadClient.cpp  DownloadListCtrl.cpp  DownloadListCtrl.h  ECSpecialCoreTags.cpp  ECSpecialMuleTags.cpp  EncryptedStreamSocket.cpp  ExternalConn.cpp  ExternalConn.h  ExternalConnector.cpp  ExternalConnector.h  FileDetailDialog.cpp  FileDetailDialog.h  FirstRunWizard.cpp  Friend.cpp  FriendList.cpp  FriendList.h  GenericClientListCtrl.cpp  GenericClientListCtrl.h  GuiEvents.cpp  GuiEvents.h  HTTPDownload.cpp  (+65 more)
src/kademlia/kademlia/: Search.cpp
src/libs/common/: Path.cpp  Path.h
src/libs/ec/abstracts/: ECCodes.abstract
src/libs/ec/cpp/: ECCodes.h  ECSpecialTags.h  RemoteConnect.cpp  RemoteConnect.h
src/libs/ec/java/: ECCodes.java
src/libwebcommon/: Etag.cpp  Jwt.cpp  Jwt.h
src/utils/aLinkCreator/src/: CMakeLists.txt
src/utils/cas/: CMakeLists.txt
src/utils/wxCas/src/: CMakeLists.txt
src/webapi/: AmuleApiConfig.cpp  Api.cpp  Api.h  App.cpp  App.h  CMakeLists.txt  EcService.h  EventDiff.cpp  EventDiff.h  HttpServer.cpp  LogTee.cpp  LogTee.h  README.md  Refresher.cpp  RefresherTick.cpp  State.cpp  State.h
src/webapi/static/: index.html
src/webapi/static/css/: app.css
src/webapi/static/i18n/: en.json  es.json
src/webapi/static/js/: api.js  app.js  charts.js  components.js  dom.js  events.js  format.js  i18n.js  icons.js  store.js  theme.js
src/webapi/static/js/views/: about.js  categories.js  download-detail.js  downloads.js  ed2k.js  kad.js  login.js  logs.js  networks.js  peers.js  preferences.js  search.js  servers.js  shared-detail.js  shared.js  split-detail.js  stats.js
src/webapi/tools/: check-i18n.mjs  run-dev.sh  update-vendor.sh
src/webserver/default/: amuleweb-main-prefs.php
src/webserver/src/: CMakeLists.txt  WebInterface.cpp  WebServer.cpp  php_amule_lib.cpp
unittests/curl-tests/amuleapi/: 01-version-and-errors.sh  04-read-downloads-shared.sh  05-read-servers-kad-categories-prefs.sh  07-read-stats-and-search-results.sh  10-refresher-lazy-ondemand.sh  11-downloads-default-filter.sh  12-downloads-add-patch.sh  15-preferences-patch.sh  17-shared-priority-patch.sh  18-categories-crud.sh  19-search.sh  22-sse-diff-emission.sh  26-rfc-followup-endpoints.sh  29-bulk-mutations.sh  31-shared-directories.sh  run-all.sh
unittests/tests/: CMakeLists.txt  CloneFileTest.cpp  LogTeeTest.cpp  OtherFunctionsTest.cpp  RefresherTest.cpp  StateTest.cpp
